--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Fabio Ribeiro Martins",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
